--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
-Ted Ralphs <ted@lehigh.edu>
+Daniel Kowalczyk <daniel.kowalczyk@kuleuven.be>
+Roel Leus <roel.leus@kuleuven.be>
+Christopher Hojny <c.hojny@tue.nl>
+Stefan Røpke <ropke@dtu.dk>
